--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 
@@ -13,9 +14,140 @@ body{
 }
 
 .full-height{
-    height: 100vh;
+    height: calc(100vh - 72px);
 }
 
 .flex-column{
     flex-direction: column;
+}
+
+#chanceOutput{
+    font-size: 8rem;
+}
+
+.no-margin-left{
+    margin-left: 0;
+}
+
+.selectedCollege{
+    font-weight: bold;
+}
+
+ul .mb-1{
+    cursor: pointer;
+}
+
+.hideElement{
+    display: none;
+}
+
+li:hover{
+    background-color: rgba(161, 216, 252, 0.479);
+    border-radius: 3px;
+}
+
+.headerColor{
+    background-color: black;
+    width: 100vw;
+    border-radius: 3px;
+}
+
+.imageDimension{
+    width: 480px;
+    height: 270px;
+    padding: 3px;
+    border-radius: 8px;
+}
+
+#textBlock{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#shownText{
+    position: absolute;
+}
+
+.imageContainer:hover img{
+    opacity: 0.5;
+}
+
+.imageContainer{
+    position: relative;
+    display: inline-block;
+}
+
+
+.UCLA:hover::after{
+    content: "UCLA";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    line-height: 100%;
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.UCI:hover::after{
+    content: "UCI";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    line-height: 100%;
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+.full-width{
+    width: 100vw;
+}
+
+#collegeWebsite{
+    cursor: pointer;
+    color: blue;
+}
+
+#collegeMajorsList{
+    cursor: pointer;
+    color: blue;
+}
+
+#picture{
+    width: 720px;
+    height: 405px;
+    padding: 3px;
+    border-radius: 8px;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+}
+
+#pictureWebsite{
+    cursor: pointer;
+    color: blue;
+}
+
+#pictureWebsite:hover {
+    color: rgb(37, 156, 253);
+    text-decoration: underline;
+}
+
+#collegeWebsite:hover {
+    color: rgb(37, 156, 253);
+    text-decoration: underline;
+}
+
+#collegeMajorsList:hover {
+    color: rgb(37, 156, 253);
+    text-decoration: underline;
 }
